--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -10,18 +10,49 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card card-sh">
-          <div class="card-header text-center fs-4">Add Category</div>
+          <div class="card-header text-center">
+            <p class="fs-4">Add Category</p>
+          <th:block th:if="${session.succMsg}">
+            <p class="text-success fw-bold">[[${session.succMsg}]]</p>
+            <th:block th:text="${@commonServiceImpl.removeSessionMsg()}"></th:block>
+          </th:block>
+
+            <th:block th:if="${session.errorMsg}">
+              <p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+              <th:block th:text="${@commonServiceImpl.removeSessionMsg()}"></th:block>
+            </th:block>
+          </div>
           <div class="card-body">
-            <form>
+            <form action="/admin/saveCategory" method="post"
+                  enctype="multipart/form-data">
               <div class="mb-3">
-                <label>Enter Category</label>
-                <input type="text" class="form-control">
+                <label>Enter Category</label> <input type="text" name="name"
+                                                     class="form-control">
               </div>
 
               <div class="mb-3">
-                <label>Upload Image</label>
-                <input type="file" class="form-control">
+                <label>Status</label>
+
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" checked
+                         value="true" name="isActive" id="flexRadioDefault1">
+                  <label class="form-check-label" for="flexRadioDefault1">
+                    Active </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="isActive"
+                         value="false" id="flexRadioDefault2"> <label
+                        class="form-check-label" for="flexRadioDefault2">
+                  Inactive </label>
+                </div>
+
               </div>
+
+              <div class="mb-3">
+                <label>Upload Image</label> <input type="file" name="file"
+                                                   class="form-control">
+              </div>
+              <button class="btn btn-primary col-md-12 mt-2">Save</button>
             </form>
 
           </div>
@@ -36,16 +67,18 @@
               <tr>
                 <th scope="col">Sl No.</th>
                 <th scope="col">Category</th>
+                <th scope="col">Status</th>
                 <th scope="col">Image</th>
                 <th scope="col">Action</th>
               </tr>
               </thead>
               <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+              <tr th:each="cat,c:${categories}">
+                <th scope="row">[[${c.count}]]</th>
+                <td>[[${cat.name}]]</td>
+                <td>[[${cat.isActive}]]</td>
+                <td><img th:src="@{'/img/categoryImg/'+${cat.imageName}}" width="50px" height="50px"></td>
+
               </tr>
 
               </tbody>
