--- a/src/main/resources/templates/admin/addProduct.html
+++ b/src/main/resources/templates/admin/addProduct.html
@@ -10,9 +10,22 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card card-sh">
-                    <div class="card-header text-center fs-4">Add Product</div>
+                    <div class="card-header text-center">
+                    <p class="fs-4">Add Product</p>
+
+                    <th:block th:if="${session.succMsg}">
+                        <p class="text-success fw-bold">[[${session.succMsg}]]</p>
+                        <th:block th:text="${@commonServiceImpl.removeSessionMsg()}"></th:block>
+                    </th:block>
+
+                    <th:block th:if="${session.errorMsg}">
+                        <p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+                        <th:block th:text="${@commonServiceImpl.removeSessionMsg()}"></th:block>
+                    </th:block>
+                    </div>
+
                     <div class="card-body">
-                        <form>
+                        <form action="/admin/saveProduct" method="post" enctype="multipart/form-data">
                             <div class="mb-3">
                                 <label>Enter Title</label>
                                 <input type="text" name="title" class="form-control">
@@ -20,31 +33,49 @@
 
                             <div class="mb-3">
                                 <label>Enter Description</label>
-                                <textarea rows="3" cols="" class="form-control"></textarea>
+                                <textarea rows="3" cols="" class="form-control" name="description"></textarea>
                             </div>
 
                             <div class="mb-3">
                                 <label>Category</label>
-                                <select class="form-control">
+                                <select class="form-control" name="category">
                                     <option>--select--</option>
-                                    <option>Electronics</option>
+                                    <option th:each="c:${categories}">[[${c.name}]]</option>
                                 </select>
                             </div>
 
                             <div class="mb-3">
                                 <label>Enter Price</label>
-                                <input type="text" name="title" class="form-control">
+                                <input type="number" name="price" class="form-control">
+                            </div>
+
+                            <div class="mb-3">
+                                <label>Status</label>
+
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" checked
+                                           value="true" name="isActive" id="flexRadioDefault1">
+                                    <label class="form-check-label" for="flexRadioDefault1">
+                                        Active </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           value="false" id="flexRadioDefault2"> <label
+                                        class="form-check-label" for="flexRadioDefault2">
+                                    Inactive </label>
+                                </div>
+
                             </div>
 
                             <div class="row">
                                 <div class="mb-3 col">
                                     <label>Enter Stock</label>
-                                    <input type="text" name="title" class="form-control">
+                                    <input type="text" name="stock" class="form-control">
                                 </div>
 
                                 <div class="mb-3 col">
                                     <label>Upload Image </label>
-                                    <input type="text" name="title" class="form-control">
+                                    <input type="file" name="file" class="form-control">
                                 </div>
                             </div>
                             <button class="btn btn-primary col-md-12">Submit</button>
