--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -78,6 +78,9 @@
                 <td>[[${cat.name}]]</td>
                 <td>[[${cat.isActive}]]</td>
                 <td><img th:src="@{'/img/categoryImg/'+${cat.imageName}}" width="50px" height="50px"></td>
+                <td><a th:href="@{'/admin/editCategory/'+${cat.id}}" class="btn btn-primary btn-sm"> <i class="fa-solid fa-pen-to-square fa-1x"></i>Edit</a>
+                  <a th:href="@{'/admin/deleteCategory/'+${cat.id}}" class="btn btn-danger btn-sm"> <i class="fa-solid fa-trash fa-1x"></i>Delete</a></td>
+
 
               </tr>
 
