--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -64,7 +64,7 @@
 <!--end navbar-->
 <div th:replace="${content}"></div>
 <!--start footer-->
-<div class="container-fluid p-1 bg-primary text-center text-white">
+<div class="container-fluid p-1 bg-primary text-center text-white " style="margin-top:155px">
     <p>Ecommerce.com</p>
 </div>
 <!--end footer-->
