--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -135,6 +135,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
     <!--end latest product module-->
 
