--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -33,17 +33,16 @@
                         Category
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                        <li th:each="c:${categorys}"><a class="dropdown-item" th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
+
+                    </ul></li>
 
             </ul>
 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <th:block th:if="${user==null}">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/login"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
+                    <a class="nav-link active" aria-current="page" href="/signin"><i class="fa-solid fa-right-to-bracket"></i> Login</a>
                 </li>
 
                 <li class="nav-item">
@@ -53,8 +52,26 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/admin/">Admin</a>
                 </li>
+                </th:block>
+
+                <th:block th:if="${user!=null}">
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            [[${user.name}]]
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+
+                        </ul></li>
 
 
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/logout"><i class="fa-solid fa-right-to-bracket"></i> Logout</a>
+                </li>
+                </th:block>
 
             </ul>
 
