--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -56,6 +56,10 @@
 
                 <th:block th:if="${user!=null}">
 
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/logout"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+                    </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             [[${user.name}]]
