--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -57,7 +57,7 @@
                 <th:block th:if="${user!=null}">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/logout"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+                        <a class="nav-link active" aria-current="page" href="/user/cart"><i class="fa-solid fa-cart-shopping"></i> Cart [ [[${countCart}]] ]</a>
                     </li>
 
                     <li class="nav-item dropdown">
